# repocat

./: .repo.yml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  auth.rs  config.rs  git.rs  main.rs  output.rs  presets.rs  resolve.rs  rules.rs
src/templates/: minimal.yml  standard.yml  strict.yml
