[package]
name = "repocat"
version = "0.1.0"
edition = "2024"

[dependencies]
keyring = { version = "3", features = ["apple-native", "linux-native", "sync-secret-service"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
serde_yaml_ng = "0.10"
